Change the default color for tab alert indicator

The tab recording alert indicator icon no longer has a default color
assigned to it in the icon file. Even when touch optimized mode is
disabled, the correct color needs to be retrieved from the theme
provider.

Bug: 813763
Change-Id: I6cf37194aa1498520d973ee4300499ed402b10dc
Component: Tab alert icon, recording icon, color
Reviewed-on: https://chromium-review.googlesource.com/927110
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537877}
Former-commit-id: 117b507b32ae22a03b1646350005c0d24171cef2